# webm-snip

./: .dockerignore  .gitignore  Dockerfile.dev  README.md  compose.yaml  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
.cursor/: seek-test.html
.devcontainer/: devcontainer.json
LICENSES/: FFmpeg.txt
docs/: PRD.md  TEST_PLAN.md
scripts/: dev-mac.sh  generate-icons.mjs  prepare-ffmpeg-sidecars.mjs
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: cut_webm.rs  file_manager.rs  mod.rs  probe_media.rs  timeline_export.rs
src-tauri/src/ffmpeg/: command_builder.rs  mod.rs  validator.rs
src-tauri/src/models/: app_error.rs  cut_request.rs  export_result.rs  media_info.rs  mod.rs  open_file_result.rs  timeline_export.rs
src/components/: CutControls.svelte  DropZone.svelte  ErrorBanner.svelte  ExportStatus.svelte  Timeline.svelte  VideoPreview.svelte
src/lib/: filename.ts  tauriApi.ts  time.ts  types.ts  validation.ts
src/stores/: cutStore.ts  exportStore.ts  mediaStore.ts
