[package]
name = "webm-snip"
version = "0.1.0"
description = "A lightweight local WebM cutter."
authors = ["WebM Snip"]
edition = "2021"

[lib]
name = "webm_snip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
dirs = "5.0"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.2", features = ["protocol-asset"] }
thiserror = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
